# helix

./: .gitignore  .gitmodules  CMakeLists.txt  helix.jucer  readme.md
.github/workflows/: cmake.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/audio/: FrequencyDelay.cpp  FrequencyDelay.h  HelixProcessor.cpp  HelixProcessor.h
